--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,12 +12,12 @@
  *
  */
 
-@import "bootstrap-sprockets";
-@import "bootstrap";
 // import bootstrap-sprockets before bootstrap if using bootstrap >= 3.2
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 @import 'bootstrap-datetimepicker';
+
+.spacer { height: 1.5em; }
 
 .table-responsive-md {
   font-size: 14px;
