--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -6,6 +6,6 @@
   <br>
   <%= link_to 'Nowa rezerwacja', new_reservation_path, :class => "btn btn-default" %>
   <br>
-  <%= render partial: 'list' %>
+  <%= render 'list' %>
 </div>
 <br>
