--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,12 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 @import 'bootstrap-datetimepicker';
+@import 'jquery-ui';
+@import 'jquery-ui/autocomplete';
+body {
+  font-family: "Calibri";
+  font-size: 15px;
+}
 
 .spacer { height: 1.5em; }
 
@@ -60,3 +66,19 @@
   margin-right: 1em; }
 .flickr_pagination .next_page {
   margin-left: 1em; }
+
+.custom-combobox {
+  position: relative;
+  display: inline-block;
+}
+.custom-combobox-toggle {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin-left: -1px;
+  padding: 0;
+}
+.custom-combobox-input {
+  margin: 0;
+  padding: 5px 10px;
+}
