--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,13 +6,15 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-  <body>
-  <%= render 'layouts/header' %>
-  <div class="container">
-    <% flash.each do |name, msg| %>
-      <%= content_tag :div, msg, class: 'alert alert-info' %>
-    <% end %>
+  <body style="background-image: url('<%= image_path('background.jpg') %>')">
+  <div>
+    <%= render 'layouts/header' %>
+    <div class="container">
+      <% flash.each do |name, msg| %>
+        <%= content_tag :div, msg, class: "alert alert-#{name}" %>
+      <% end %>
+    </div>
+    <%= yield %>
   </div>
-  <%= yield %>
   </body>
 </html>
